<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧靖江</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_weather">加载...</string>
    <string name="city_name">靖江</string>
    <string name="search_title">输入商家、商品名称</string>

    <!-- 底部菜单 -->
    <string name="memu_page_home_name">首页</string>
    <string name="menu_fen_lei">商家</string>
    <string name="menu_shopping_cart">购物车</string>
    <string name="menu_myself">我的</string>

    <!-- 登录/注册页面 -->
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="login_register">免费注册</string>
    <string name="phone">手机号</string>
    <string name="username">账号</string>
    <string name="username_ed">请输入您的手机号</string>
    <string name="pwd">密码</string>
    <string name="pwd_ed">请输入您的密码</string>
    <string name="phone_ed">请输入手机号码</string>
    <string name="password">设置密码</string>
    <string name="old_password">原始密码</string>
    <string name="old_password_ed">请输入原始密码</string>
    <string name="password_ed">请输入密码</string>
    <string name="password_sure_ed">请再次输入密码</string>
    <string name="password_sure">确认密码</string>
    <string name="forget_password">找回密码？</string>
    <string name="code_number">校验码</string>
    <string name="code_number1">每小时最多发送三次</string>
    <string name="send_code_number">重新获取</string>
    <string name="next_step">下一步</string>
    <string name="use_treaty">注册即视为同意</string>
    <string name="use_treaty1">智慧靖江服务协议</string>
    <string name="submit">提交</string>
    <string name="look_for_password">找回密码</string>
    <string name="new_password">新密码</string>
    <string name="change_password">修改密码</string>
    <string name="code_tishi1">请输入手机号</string>
    <string name="code_tishi2">收到的短信校验码</string>

    <!-- 星期 -->
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>

    <!-- 收货地址页面 -->
    <string name="address_title">我的收货地址</string>
    <string name="address_add">添加新地址</string>
    <string name="address_update_title">修改收货地址</string>
    <!-- 新增收货地址页面 -->
    <string name="address_add_title">新增收货地址</string>
    <string name="address_set_default">设为默认</string>
    <string name="address_name">收货人</string>
    <string name="address_phone">联系电话</string>
    <string name="address_province">所在省份</string>
    <string name="address_city">所在城市</string>
    <string name="address_district">所在区县</string>
    <string name="address_address">详细地址</string>
    <string name="address_zipcode">邮      编：</string>
    <string name="address_save">保存</string>
    <string name="address_selected">--请选择--</string>

    <!-- 设置页面 -->
    <string name="set_title">设置</string>
    <string name="set_clean">清除缓存</string>
    <string name="set_version">版本更新</string>
    <string name="set_changepwd">修改密码</string>
    <string name="set_ismessage">消息推送</string>
    <string name="set_about">关于我们</string>
    <string name="set_fankui">用户反馈</string>
    <string name="set_out">注销用户</string>

    <!-- 新闻页面 -->
    <string name="news_title">今日资讯</string>
    <string name="news_information">最新资讯</string>

    <!-- 团购 -->
    <string name="foods_title">团购商家</string>
    <string name="foods_recommend_tilte">团购推荐</string>
    <string name="foods_desc_title">团购详情</string>

    <!-- 附近商圈 -->
    <string name="nearby_shopping">附近商圈</string>
    <string name="more">更多</string>

    <!-- 商家 -->
    <string name="merchant_real_time_recommend">实时推荐</string>
    <string name="merchant_jing_pin_men">精品男装</string>
    <string name="merchant_figure_computer">数码电脑</string>

    <!-- 我的 -->
    <string name="my_title">我的</string>
    <string name="user_jifen">我的积分</string>
    <string name="user_shoucang">我的收藏</string>
    <string name="user_dingdan_shops">我的购物订单</string>
    <string name="user_dingdan_foods">我的团购订单</string>
    <string name="user_address">我的收货地址</string>
    <string name="user_baoliao">我的爆料</string>
    <string name="user_set">设置</string>

    <!-- 购物车 -->
    <string name="shopping_over">结算</string>

    <!-- 搜索页面 -->
    <string name="search_re_men">热门搜索</string>

    <!-- 消息 页面 -->
    <string name="message_title">消息</string>

    <!-- 团购店铺详情 -->
    <string name="food_shop_title">商家详情</string>
    <string name="food_desc_number">购买数量</string>
    <string name="food_desc_men_shi_jia">门市价:</string>
    <string name="food_desc_immed_buy">立即抢购</string>
    <string name="food_desc_merchant_message">商家信息</string>
    <string name="food_desc_tui_jian">推荐菜</string>
    <string name="food_add_shop_cart_number">选择  数量</string>
    <string name="foods_list_title">团购商家</string>

    <!-- 商品列表 页面 -->
    <string name="shopping_title">商品列表</string>

    <!-- 我的积分页面 -->
    <string name="jifen_title">我的积分</string>
    <string name="jifen_qiandao">每日签到</string>
    <string name="jifen_guize">积分规则</string>

    <!-- 我的订单页面 -->
    <string name="dingdan_title1">购物</string>
    <string name="dingdan_title2">团购</string>
    <string name="order_desc_title">订单详情</string>
    <string name="order_desc_preson">  收货人 :</string>
    <string name="order_desc_address">收货地址 :</string>
    <string name="order_desc_freight">运费</string>
    <string name="order_desc_shi_ji">总金额</string>
    <string name="order_desc_order_number">订单编号 :</string>
    <string name="order_desc_create_times">创建时间 :</string>
    <string name="order_shop_name_tel">商家电话 :</string>
    <string name="order_desc_cancel">取消订单</string>
    <string name="order_desc_pay">付款</string>
    <string name="order_pay_desc">付款详情</string>
    <string name="order_pay_user_name">用户名</string>
    <string name="order_pay_way">支付方式</string>
    <string name="order_pay_money">支付金额</string>
    <string name="order_pay_sure">确定支付</string>

    <!-- 申请退货 -->
    <string name="refund_title">申请退货</string>
    <string name="refund_sub">提交申请</string>

    <!-- 个人资料 -->
    <string name="user_title">个人资料</string>
    <string name="user_touxiang">头像</string>
    <string name="user_zhanghao">账号</string>
    <string name="user_nicheng">昵称</string>
    <string name="user_age">年龄</string>
    <string name="user_sex">性别</string>
    <string name="user_work">职业</string>

    <!-- 发表评论 -->
    <string name="pinglun_title">发表评论</string>
    <string name="pinglun_sub">提交</string>

    <!-- 爆料 -->
    <string name="baoliao_title">我要爆料</string>
    <string name="baoliao">爆料</string>
    <string name="baoliao_biaoti">新闻标题</string>
    <string name="baoliao_biaoti_ed">请输入新闻标题</string>
    <string name="baoliao_neirong">新闻内容</string>
    <string name="baoliao_neirong_ed">请输入新闻内容（爆料成功将增加50积分）</string>
    <string name="baoliao_pic">新闻图片（选填，提供新闻图片）</string>
    <string name="baoliao_luyin">选择录音</string>
    <string name="baoliao_shiping">选择视频</string>
    <string name="baoliao_fangshi">爆料方式</string>
    <string name="baoliao_gongkai">公开</string>
    <string name="baoliao_niming">匿名</string>

    <!-- 商品列表  详情 页面 -->
    <string name="shopping_flag">¥</string>
    <string name="shopping_money">原价:</string>
    <string name="shopping_expressage">快递:</string>
    <string name="shopping_collect">选择  颜色  尺寸  数量</string>
    <string name="shopping_comment">宝贝评论</string>
    <string name="shopping_buy">立即购买</string>
    <string name="shopping_add_cart">加入购物车</string>
    <string name="shopping_name">店铺</string>
    <string name="shopping_shoucong">收藏</string>
    <string name="shopping_comment_more">查看更多评论</string>
    <string name="shopping_sure">确认</string>
    <string name="shopping_color">颜色分类</string>
    <string name="shopping_chicun">尺寸</string>

    <!-- 签到 页面 -->
    <string name="qian_dao_title">签到</string>
    <string name="qian_dao_ji_fen">我的积分</string>
    <string name="qian_dao_today">今日签到</string>
    <string name="qian_dao_root">积分规则  >></string>

    <!-- 酒店页面 -->
    <string name="hotle_title">酒店</string>
    <string name="hotle_desc">酒店详情</string>
    <string name="hotle_share">分享</string>
    <string name="hotle_phone">电话</string>
    <string name="hotle_room_message">房间信息</string>

    <!-- ktv页面 -->
    <string name="ktv_title">KTV</string>
    <string name="ktv_desc">KTV详情</string>
    <string name="ktv_shoping_message">团购信息</string>

    <!-- 物流信息 -->
    <string name="wu_liu_title">查看物流</string>
    <string name="wu_liu_state">物流状态</string>
    <string name="wu_liu_lai_yuan">承运来源:</string>
    <string name="wu_liu_order_number">运单编号:</string>
    <string name="wu_liu_phone">官方电话:</string>
    <string name="wu_liu_preson">派送员</string>

    <!-- 上拉加载下拉刷新 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="title_activity_sub_pay">SubPayActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_register_treaty">RegisterTreatyActivity</string>

</resources>
