<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bghui"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:background="@color/home_pager_title"
        android:paddingLeft="@dimen/_20px_in720p"
        android:paddingRight="@dimen/_20px_in720p" >

        <LinearLayout
            android:id="@+id/base_back_lay"
            android:layout_width="@dimen/_80px_in720p"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_centerVertical="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/back_tv"
                android:layout_width="@dimen/_20px_in720p"
                android:layout_height="@dimen/_30px_in720p"
                android:background="@drawable/back_index" />
        </LinearLayout>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_title"
            android:textSize="@dimen/_36px_in720p" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20px_in720p"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20px_in720p"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_tishi1"
                android:textColor="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />

            <TextView
                android:id="@+id/use_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="188****8888"
                android:textColor="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_tishi2"
                android:textColor="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_20px_in720p"
            android:background="@color/bghui" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code_number" />

            <EditText
                android:id="@+id/register_phone_code_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80px_in720p"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/code_number1"
                android:inputType="number"
                android:maxLength="4"
                android:padding="@dimen/_15px_in720p"
                android:textColor="@color/texthei"
                android:textColorHint="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />

            <View
                android:layout_width="@dimen/_2px_in720p"
                android:layout_height="@dimen/_40px_in720p"
                android:background="@color/bghui" />

            <TextView
                android:id="@+id/send_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80px_in720p"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/send_code_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:background="@color/bghui" />

        <TextView
            android:id="@+id/register_next_step"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_40px_in720p"
            android:background="@drawable/sub_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="#ffffff"
            android:textSize="@dimen/_31px_in720p" />

        <LinearLayout
            android:id="@+id/tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_40px_in720p"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_treaty"
                android:textColor="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />

            <TextView
                android:id="@+id/use_treaty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_treaty1"
                android:textColor="@color/lan"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>