<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bghui"
    android:orientation="vertical"
    tools:context=".RegisterPswActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:background="@color/home_pager_title"
        android:paddingLeft="@dimen/_20px_in720p"
        android:paddingRight="@dimen/_20px_in720p" >

        <LinearLayout
            android:id="@+id/base_back_lay"
            android:layout_width="@dimen/_80px_in720p"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_centerVertical="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/back_tv"
                android:layout_width="@dimen/_20px_in720p"
                android:layout_height="@dimen/_30px_in720p"
                android:background="@drawable/back_index" />
        </LinearLayout>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/register_title"
            android:textSize="@dimen/_36px_in720p" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20px_in720p"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/register_password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40px_in720p"
                android:background="@color/white"
                android:hint="@string/password_ed"
                android:inputType="textPassword"
                android:textColor="@color/texthei"
                android:textColorHint="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:background="@color/bghui" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_sure" />

            <EditText
                android:id="@+id/register_password_sure_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40px_in720p"
                android:background="@color/white"
                android:hint="@string/password_sure_ed"
                android:inputType="textPassword"
                android:textColor="@color/texthei"
                android:textColorHint="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:background="@color/bghui" />

        <TextView
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginRight="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_40px_in720p"
            android:background="@drawable/sub_bg"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/texthei"
            android:textSize="@dimen/_31px_in720p" />

        <LinearLayout
            android:id="@+id/tishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20px_in720p"
            android:layout_marginLeft="@dimen/_20px_in720p"
            android:layout_marginTop="@dimen/_40px_in720p"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_treaty"
                android:textColor="@color/texthui"
                android:textSize="@dimen/_31px_in720p" />

            <TextView
                android:id="@+id/use_treaty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_treaty1"
                android:textColor="@color/lan"
                android:textSize="@dimen/_31px_in720p" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>