<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LookForPswActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:background="@color/home_pager_title"
        android:padding="@dimen/_15px_in720p" >

        <LinearLayout
            android:id="@+id/base_back_lay"
            android:layout_width="@dimen/_80px_in720p"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_centerVertical="true"
            android:gravity="center" >

            <TextView
                android:id="@+id/back_tv"
                android:layout_width="@dimen/_20px_in720p"
                android:layout_height="@dimen/_30px_in720p"
                android:background="@drawable/back_index" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/look_for_password"
            android:textSize="@dimen/_36px_in720p" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_margin="@dimen/_30px_in720p"
        android:background="@drawable/login_shape"
        android:gravity="center_vertical"
        android:padding="@dimen/_15px_in720p" >

        <EditText
            android:id="@+id/register_phone_num_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/phone"
            android:textColor="#333333"
            android:inputType="phone"
            android:textColorHint="#dedede"
            android:textSize="@dimen/_31px_in720p"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_margin="@dimen/_30px_in720p"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/register_phone_code_ed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_weight="1"
            android:background="@drawable/login_shape"
            android:hint="@string/code_number"
            android:padding="@dimen/_15px_in720p"
            android:textColor="#333333"
            android:inputType="phone"
            android:textColorHint="#dedede"
            android:textSize="@dimen/_31px_in720p"
            />

        <TextView
            android:id="@+id/send_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80px_in720p"
            android:layout_marginLeft="@dimen/_40px_in720p"
            android:layout_weight="1"
            android:background="@color/send_code"
            android:gravity="center"
            android:text="@string/send_code_number"
            android:textSize="@dimen/_31px_in720p"
            android:textColor="@color/black" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/register_next_step"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80px_in720p"
        android:layout_marginLeft="@dimen/_55px_in720p"
        android:layout_marginRight="@dimen/_55px_in720p"
        android:layout_marginTop="@dimen/_60px_in720p"
        android:background="#770000ff"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="#ffffff"
        android:textSize="@dimen/_36px_in720p" />

    

</LinearLayout>
